# sigma_preachers

./: README.md  main.py  pyproject.toml
database/: __init__.py  create_db.py
instance/: sigma_preachers.db
project/: __init__.py
project/database/: __init__.py  create_db.py  insert_db.py  select_db.py  update_db.py
project/forms/: __init__.py  add_room.py  ban_user.py  change_email.py  contact_us.py  edit_profile.py  login.py  promote_user.py  reset_password.py  signup.py
project/routes/: __init__.py  about.py  admin_messages.py  ban_user.py  change_email.py  contact_us.py  edit_profile.py  home.py  index.py  login.py  logout.py  promote_user.py  reset_password.py  room.py  search_rooms.py  search_users.py  search_users_api.py  signup.py  view_profile.py
project/services/: __init__.py  admin_messages.py  ban.py  change_email.py  contact_us.py  edit_profile.py  email.py  hash.py  home.py  login.py  master.py  populate.py  promote_user.py  reset_password.py  room.py  search_rooms.py  search_users.py  signup.py  view_profile.py  websocket.py
project/static/js/: admin_messages.js  base_header.js  home.js  room.js  (+2 more)
project/templates/: about.html  admin_messages.html  ban_user.html  base.html  base_header.html  change_email.html  contact_us.html  edit_profile.html  home.html  login.html  promote_user.html  reset_password.html  room.html  search_rooms.html  search_users.html  signup.html  submit_username.html  view_profile.html
routes/: __init__.py
tests/: conftest.py  test_insert.py  test_route.py  test_select.py  test_service.py  test_update.py
