[project]
name = "sigma-preachers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "pytest>=9.1.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]
